# forge-ai

./: .gitignore  LICENSE  README.md  forge.yaml  pyproject.toml
.github/workflows/: ci.yml
forge/: __init__.py  aggregator.py  cli.py  config.py  engine.py  orchestrate.py
forge/agents/: __init__.py  antigravity.py  base.py  claude.py  copilot.py  gemini.py
forge/tui/: __init__.py  panels.py
tests/: smoke_duo.py  smoke_test.sh  test_agents.py  test_build.py  test_duo_pipeline.py  test_forge.py
